feat: add model category get by id and delete and update functionalities
